@@ -2,6 +2,7 @@ meecast (0.6.1) unstable; urgency=low
 
   * Added icons for hko.gov.hk
   * Fixed problem with "Daily" and "15 minutes" updatings
+  * Fixed problem wuith splash's setting
 
  -- Vlad Vasiliev <vlad@gas.by>  Sat, 28 Jul 2012 00:42:23 +0200
 
